--- a/_notebooks/2022-10-23-As-It-Was.ipynb
+++ b/_notebooks/2022-10-23-As-It-Was.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Unit 8 - 2D Array\n",
-    ">  Student Led Instruction.\n",
-    "- title: Unit 08 Thu - 2D Array\n",
+    "# As it Was\n",
+    ">  Billboard Top Songs of the Year\n",
+    "- title: As it Was\n",
     "- toc: true\n",
     "- badges: false\n",
     "- image: /images/apcsa_units.png\n",
     "- type: ap\n",
-    "- week: 13\n",
+    "- artist: Harry Styles\n",
     "- comments: true"
    ]
   },
@@ -19,16 +19,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Objectives\n",
-    "> Make sure lesson has the following...\n",
-    "- Lesson Purpose and Objectives\n",
-    "- Review of Unit Materials and Videos from AP Classroom\n",
-    "- Key Vocabulary\n",
-    "- Key Coding requirements, by interactive coding challenges during lesson\n",
-    "- Highlight any Tricks or Gotchas from Unit, could be added to coding challenge\n",
-    "- Lesson should be interactive and hopefully fun\n",
-    "- 30 minutes of Homework / Hacks\n",
-    "- Lesson times is between 20 and 30 minutes"
+    "# As it Was by Harry Styles\n",
+    "\n",
+    "\n",
+    "\n",
+    "![Jimmy Cooks By Drake (feat. 21 Savage)](static/images/jimmy-cooks.jpeg)\n"
    ]
   }
  ],
