--- a/_posts/2022-12-12-PT-teams.md
+++ b/_posts/2022-12-12-PT-teams.md
@@ -2,8 +2,8 @@
 toc: true
 comments: true
 layout: post
-title:  Week of 12/12, Database and Security Project
-description:  Individual Portfolio #3
+title:  Number 1. Anti-Hero by Taylor Swift
+description:  Top song on the BillBoard top 100.
 permalink: /points/16
 image: /images/points.jpeg
 categories: []
@@ -11,7 +11,9 @@ type: plan
 week: 16
 ---
 
-## Plans Week 16
-- Monday: Form Tri 2 Project Teams, Live Grade through week
-- Tuesday, Wednesday, Thursday: Content, Database, and Security Project
-- Friday: TBD
+#"Anti-hero"
+"Taylor Swift scores one of the most historic weeks in the 64-year history of the Billboard Hot 100 songs chart, as she becomes the first artist to claim the survey’s entire top 10 in a single frame.
+
+Swift surpasses Drake, who logged nine of the Hot 100’s top 10 for a week in September 2021.
+
+Leading the way for Swift on the Hot 100, “Anti-Hero” launches at No. 1, marking her ninth career leader." -Billboard
