--- a/_posts/2022-12-12-PT-teams.md
+++ b/_posts/2022-12-12-PT-teams.md
@@ -3,7 +3,7 @@ toc: true
 comments: true
 layout: post
 title:  Number 1. Anti-Hero by Taylor Swift
-description:  Top song on the BillBoard top 100.
+description:  Top songs of the Year ~ BillBoard
 permalink: /points/16
 image: /images/points.jpeg
 categories: []
