--- a/_notebooks/2022-10-23-Anti-hero.ipynb
+++ b/_notebooks/2022-10-23-Anti-hero.ipynb
@@ -19,15 +19,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Anti-Hero: By Taylor Swift\n",
     "\n",
-    "\"Taylor Swift scores one of the most historic weeks in the 64-year history of the Billboard Hot 100 songs chart, as she becomes the first artist to claim the survey’s entire top 10 in a single frame.\n",
+    "# As it Was by Harry Styles\n",
     "\n",
-    "Swift surpasses Drake, who logged nine of the Hot 100’s top 10 for a week in September 2021.\n",
+    "\"Harry Styles‘ “As It Was” logs a 15th week at No. 1 on the Billboard Hot 100 songs chart. Only three songs have led longer over the survey’s 64-year history, while “As It Was” claims outright the longest reign for a song by a British artist, as well as by an act with no accompanying artists. Harry Styles' 'As It Was' finds him facing down gravity and impermanence and arriving at what comes next.\" ~ BillBoard\n",
     "\n",
-    "Leading the way for Swift on the Hot 100, “Anti-Hero” launches at No. 1, marking her ninth career leader.\" -Billboard\n",
-    "\n",
-    "![Jimmy Cooks By Drake (feat. 21 Savage)](static/images/jimmy-cooks.jpeg)\n"
+    "![Jimmy Cooks By Drake (feat. 21 Savage)](static/images/jimmy-cooks.jpeg)\n",
+    "\n"
    ]
   }
  ],
