--- a/_posts/2022-10-21-Anti-hero.md
+++ b/_posts/2022-10-21-Anti-hero.md
@@ -2,7 +2,7 @@
 toc: true
 comments: true
 layout: post
-title:  Number 1. Anti-Hero by Taylor Swift
+title: Anti-Hero by Taylor Swift
 description:  Top songs of the Year ~ BillBoard
 permalink: /points/16
 image: /images/points.jpeg
