--- a/_notebooks/2022-11-30-AP-unitA.ipynb
+++ b/_notebooks/2022-11-30-AP-unitA.ipynb
@@ -4,31 +4,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Unit 10 - Inheritance\n",
-    ">  Student Led Instruction.\n",
-    "- title: Unit 10 Wed - Recursion\n",
-    "- toc: true\n",
-    "- badges: false\n",
-    "- image: /images/apcsa_units.png\n",
-    "- type: ap\n",
-    "- week: 14\n",
-    "- comments: true"
+    "---\n",
+    "toc: true\n",
+    "comments: true\n",
+    "layout: post\n",
+    "title: Jimmy Cooks\n",
+    "description:  Top songs of the Year ~ BillBoard\n",
+    "permalink: /points/16\n",
+    "image: /images/points.jpeg\n",
+    "categories: []\n",
+    "type: plan\n",
+    "week: 16\n",
+    "---"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Objectives\n",
-    "> Make sure lesson has the following...\n",
-    "- Lesson Purpose and Objectives\n",
-    "- Review of Unit Materials and Videos from AP Classroom\n",
-    "- Key Vocabulary\n",
-    "- Key Coding requirements, by interactive coding challenges during lesson\n",
-    "- Highlight any Tricks or Gotchas from Unit, could be added to coding challenge\n",
-    "- Lesson should be interactive and hopefully fun\n",
-    "- 30 minutes of Homework / Hacks\n",
-    "- Lesson times is between 20 and 30 minutes"
+    "\"Drake‘s “Jimmy Cooks,” featuring 21 Savage, blasts in at No. 1 on the Billboard Hot 100 songs chart. The collaboration marks Drake’s 11th Hot 100 No. 1 and 21 Savage’s second. “Jimmy Cooks,” released on OVO/Republic Records, tallied 42.2 million streams, 3 million radio airplay audience impressions and 6,000 downloads sold in its first week (June 17-23), according to Luminate, following the June 17 arrival of parent album Honestly, Nevermind, announced only hours before its release.\" ~ BillBoard"
    ]
   }
  ],
@@ -40,7 +34,7 @@
   },
   "language_info": {
    "name": "python",
-   "version": "3.10.6"
+   "version": "3.10.0"
   },
   "orig_nbformat": 4,
   "vscode": {
