--- a/_notebooks/2022-11-30-AP-unitA.ipynb
+++ b/_notebooks/2022-11-30-AP-unitA.ipynb
@@ -11,7 +11,7 @@
     "title: Jimmy Cooks\n",
     "description:  Top songs of the Year ~ BillBoard\n",
     "permalink: /points/16\n",
-    "image: /images/points.jpeg\n",
+    "image: /images/jimmycooks.jpeg\n",
     "categories: []\n",
     "type: plan\n",
     "week: 16\n",
