--- a/_notebooks/2022-11-30-AP-unitA.ipynb
+++ b/_notebooks/2022-11-30-AP-unitA.ipynb
@@ -4,18 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
-    "toc: true\n",
-    "comments: true\n",
-    "layout: post\n",
-    "title: Jimmy Cooks\n",
-    "description:  Top songs of the Year ~ BillBoard\n",
-    "permalink: /points/16\n",
-    "image: /images/jimmycooks.jpeg\n",
-    "categories: []\n",
-    "type: plan\n",
-    "week: 16\n",
-    "---"
+    "\n",
+    "# Jimmy Cooks By Drake (feat. 21 Savage)\n",
+    ">  Album: Honestly, Nevermind (2022)\n",
+    "- title: Jimmy Cooks By Drake (feat. 21 Savage)\n",
+    "- toc: true\n",
+    "- badges: false\n",
+    "- image: /images/jimmycooks.jpeg\n",
+    "- type: ap\n",
+    "- week: 14\n",
+    "- comments: true"
    ]
   },
   {
