--- a/_notebooks/2022-10-23-As-It-Was.ipynb
+++ b/_notebooks/2022-10-23-As-It-Was.ipynb
@@ -23,7 +23,7 @@
     "\n",
     "Harry Styles‘ “As It Was” logs a 15th week at No. 1 on the Billboard Hot 100 songs chart. Only three songs have led longer over the survey’s 64-year history, while “As It Was” claims outright the longest reign for a song by a British artist, as well as by an act with no accompanying artists. Harry Styles' 'As It Was' finds him facing down gravity and impermanence and arriving at what comes next.\n",
     "\n",
-    "![As it Was By Harry Styles](/images/as-it-was.jpg)\n"
+    "![As it Was By Harry Styles](images/as-it-was.jpg)\n"
    ]
   }
  ],
