--- a/_notebooks/2022-10-23-Bad-Habit.ipynb
+++ b/_notebooks/2022-10-23-Bad-Habit.ipynb
@@ -25,7 +25,7 @@
     "\n",
     "“Bad Habit,” lead single from his July-released sophomore solo set Gemini Rights, advances three spots to No. 11 on the Billboard Hot 100 this week, in just its fourth frame on the chart. It’s his first hit of any size on the Hot 100, and already one of the biggest streaming breakout stories of 2022 — a year that hasn’t seen a tremendous number of newer artists scoring major hits.\" ~ BillBoard\n",
     "\n",
-    "![Jimmy Cooks By Drake (feat. 21 Savage)](images/jimmy-cooks.jpeg)\n"
+    "![Jimmy Cooks By Drake (feat. 21 Savage)](images/badhabits.jpeg)\n"
    ]
   }
  ],
