bad habits finish

--- a/_notebooks/2022-10-23-Bad-Habit.ipynb
+++ b/_notebooks/2022-10-23-Bad-Habit.ipynb
@@ -9,7 +9,7 @@
     "- title: Bad Habits by Steve Lacy\n",
     "- toc: true\n",
     "- badges: false\n",
-    "- image: /images/apcsa_units.png\n",
+    "- image: /images/bad-habits.jpeg\n",
     "- type: ap\n",
     "- artist: Steve Lacy\n",
     "- comments: true"
