--- a/_notebooks/2022-01-20-Light-Switch.ipynb
+++ b/_notebooks/2022-01-20-Light-Switch.ipynb
@@ -19,13 +19,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Bad Habits by Steve Lacy\n",
+    "# Light Switch By Charlie Puth\n",
     "\n",
-    "\"Steve Lacy, the breakout solo star who originally gained fame as a member of alt-soul band The Internet, has been a favorite of critics and streaming audiences for some time now. Now, he officially has his first crossover hit.\n",
+    "\"Charlie Puth has a love he just can’t shake on his new single, “Light Switch.” The funky, uptempo track the singer has been teasing for months dropped on Thursday morning (Jan. 20) as the first taste of Charlie, his upcoming follow-up to 2018’s Grammy-nominated Voicenotes. Puth, 30, breaks down the frustration of trying to walk away and getting pulled right back every time on the bouncy track that features the familiar click of a light switch on the chorus. The singer also dropped the official video for the song, in which a paunchy, crying-in-his-bag-of-chips bearded Charlie drowns his sorrows in junk food and basic cable workout shows after a bad break-up. But then the instructor jumps off the screen and puts Charlie through a Rocky-like body transformation that includes jogging, Jazzercise and a wardrobe upgrade.\" ~ BillBoard\n",
     "\n",
-    "“Bad Habit,” lead single from his July-released sophomore solo set Gemini Rights, advances three spots to No. 11 on the Billboard Hot 100 this week, in just its fourth frame on the chart. It’s his first hit of any size on the Hot 100, and already one of the biggest streaming breakout stories of 2022 — a year that hasn’t seen a tremendous number of newer artists scoring major hits.\" ~ BillBoard\n",
-    "\n",
-    "![Jimmy Cooks By Drake (feat. 21 Savage)](images/badhabits.jpeg)\n"
+    "![Light Switch By Charlie Puth](images/badhabits.jpeg)\n"
    ]
   }
  ],
