--- a/_notebooks/2022-11-19-We-Dont-Talk-About-Bruno.ipynb
+++ b/_notebooks/2022-11-19-We-Dont-Talk-About-Bruno.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# We Don't Talk About Bruno\n",
-    ">  Student Led Instruction.\n",
+    ">  Top songs of the year\n",
     "- title: We Don't Talk About Bruno\n",
     "- toc: true\n",
     "- badges: false\n",
