--- a/_notebooks/2022-06-17-Jimmy-Cooks.ipynb
+++ b/_notebooks/2022-06-17-Jimmy-Cooks.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Jimmy Cooks\n",
-    ">  Student Led Instruction.\n",
+    ">  Top songs of the year\n",
     "- title: Jimmy Cooks\n",
     "- toc: true\n",
     "- badges: false\n",
