--- a/_notebooks/2022-06-22-Bad-Habit.ipynb
+++ b/_notebooks/2022-06-22-Bad-Habit.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Bad Habits by Steve Lacy\n",
-    ">  Student Led Instruction.\n",
+    ">  Top songs of the year\n",
     "- title: Bad Habits by Steve Lacy\n",
     "- toc: true\n",
     "- badges: false\n",
