--- a/_notebooks/2022-06-17-JimmyCooks.ipynb
+++ b/_notebooks/2022-06-17-JimmyCooks.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Jimmy Cooks By Drake (Feat. 21 Savage)\n",
+    "# Jimmy Cooks By Drake \n",
     ">  Billboard Top Songs of the Year\n",
     "- title: Jimmy Cooks By Drake (Feat. 21 Savage)\n",
     "- toc: true\n",
