--- a/_notebooks/2022-06-17-JimmyCooks.ipynb
+++ b/_notebooks/2022-06-17-JimmyCooks.ipynb
@@ -19,11 +19,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# As it Was by Harry Styles\n",
+    "# Jimmy Cooks By Drake (feat. 21 Savage)\n",
     "\n",
-    "Harry Styles‘ “As It Was” logs a 15th week at No. 1 on the Billboard Hot 100 songs chart. Only three songs have led longer over the survey’s 64-year history, while “As It Was” claims outright the longest reign for a song by a British artist, as well as by an act with no accompanying artists. Harry Styles' 'As It Was' finds him facing down gravity and impermanence and arriving at what comes next.\n",
+    "Drake‘s “Jimmy Cooks,” featuring 21 Savage, blasts in at No. 1 on the Billboard Hot 100 songs chart. The collaboration marks Drake’s 11th Hot 100 No. 1 and 21 Savage’s second. “Jimmy Cooks,” released on OVO/Republic Records, tallied 42.2 million streams, 3 million radio airplay audience impressions and 6,000 downloads sold in its first week (June 17-23), according to Luminate, following the June 17 arrival of parent album Honestly, Nevermind, announced only hours before its release.\n",
     "\n",
-    "![As it Was By Harry Styles](images/as-it-was.jpg)\n"
+    "![Jimmy Cooks By Drake (feat. 21 Savage)](images/jimmy-cooks.jpeg)"
    ]
   }
  ],
