--- a/_notebooks/2022-06-17-JimmyCooks.ipynb
+++ b/_notebooks/2022-06-17-JimmyCooks.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Jimmy Cooks By Drake \n",
+    "# lol\n",
     ">  Billboard Top Songs of the Year\n",
-    "- title: Jimmy Cooks By Drake (Feat. 21 Savage)\n",
+    "- title: Jilol1 Savage)\n",
     "- toc: true\n",
     "- badges: false\n",
     "- image: /images/as-it-was.jpg\n",
