--- a/_notebooks/2022-06-17-Jimmy-Cooks.ipynb
+++ b/_notebooks/2022-06-17-Jimmy-Cooks.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Jimmy Cooks\n",
-    ">  Top songs of the year\n",
-    "- title: Jimmy Cooks\n",
+    "# Jimmy Cooks By Drake \n",
+    ">  Billboard Top Songs of the Year\n",
+    "- title: Jimmy Cooks By Drake (Feat. 21 Savage)\n",
     "- toc: true\n",
     "- badges: false\n",
-    "- image: /images/apcsa_units.png\n",
+    "- image: /images/as-it-was.jpg\n",
     "- type: ap\n",
-    "- artist: Drake\n",
+    "- artist: Drake (Feat. 21 Savage)\n",
     "- comments: true"
    ]
   },
@@ -19,11 +19,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Jimmy Cooks By Drake (feat. 21 Savage)\n",
+    "# Bad Habits by Steve Lacy\n",
     "\n",
-    "Drake‘s “Jimmy Cooks,” featuring 21 Savage, blasts in at No. 1 on the Billboard Hot 100 songs chart. The collaboration marks Drake’s 11th Hot 100 No. 1 and 21 Savage’s second. “Jimmy Cooks,” released on OVO/Republic Records, tallied 42.2 million streams, 3 million radio airplay audience impressions and 6,000 downloads sold in its first week (June 17-23), according to Luminate, following the June 17 arrival of parent album Honestly, Nevermind, announced only hours before its release.\n",
+    "\"Steve Lacy, the breakout solo star who originally gained fame as a member of alt-soul band The Internet, has been a favorite of critics and streaming audiences for some time now. Now, he officially has his first crossover hit.\n",
     "\n",
-    "![Jimmy Cooks By Drake (feat. 21 Savage)](images/jimmy-cooks.jpeg)\n"
+    "“Bad Habit,” lead single from his July-released sophomore solo set Gemini Rights, advances three spots to No. 11 on the Billboard Hot 100 this week, in just its fourth frame on the chart. It’s his first hit of any size on the Hot 100, and already one of the biggest streaming breakout stories of 2022 — a year that hasn’t seen a tremendous number of newer artists scoring major hits.\" ~ BillBoard\n",
+    "\n",
+    "![Jimmy Cooks By Drake (feat. 21 Savage)](images/badhabits.jpeg)\n"
    ]
   }
  ],
