--- a/_notebooks/2022-10-23-Anti-hero.ipynb
+++ b/_notebooks/2022-10-23-Anti-hero.ipynb
@@ -9,7 +9,7 @@
     "- title: Anti-Hero\n",
     "- toc: true\n",
     "- badges: false\n",
-    "- image: /images/antihero.jpg\n",
+    "- image: /images/apcsa_units.jpg\n",
     "- type: ap\n",
     "- artist: Taylor Swift\n",
     "- comments: true"
