--- a/_notebooks/2022-04-01-As-It-Was.ipynb
+++ b/_notebooks/2022-04-01-As-It-Was.ipynb
@@ -9,7 +9,7 @@
     "- title: As it Was\n",
     "- toc: true\n",
     "- badges: false\n",
-    "- image: /images/as-it-was.jpg\n",
+    "- image: /images/asitwas.png\n",
     "- type: ap\n",
     "- artist: Harry Styles\n",
     "- comments: true"
