--- a/_notebooks/2022-11-19-We-Dont-Talk-About-Bruno.ipynb
+++ b/_notebooks/2022-11-19-We-Dont-Talk-About-Bruno.ipynb
@@ -9,7 +9,7 @@
     "- title: We Don't Talk About Bruno\n",
     "- toc: true\n",
     "- badges: false\n",
-    "- image: /images/bad-habits.jpeg\n",
+    "- image: /images/bruno.png\n",
     "- type: ap\n",
     "- artist: Encanto - Cast, Adassa, Rhenzy Feliz, Stephanie Beatriz, Mauro Castillo, Diane Guerrero, Carolina Gaitán\n",
     "- comments: true"
