--- a/_notebooks/2022-08-12-Super-Freaky-Girl.ipynb
+++ b/_notebooks/2022-08-12-Super-Freaky-Girl.ipynb
@@ -9,7 +9,7 @@
     "- title: Super Freaky Girl\n",
     "- toc: true\n",
     "- badges: false\n",
-    "- image: /images/antihero.jpg\n",
+    "- image: /images/superfreakygirl.png\n",
     "- type: ap\n",
     "- artist: Nicki Minaj\n",
     "- comments: true"
