--- a/_notebooks/2022-08-12-Super-Freaky-Girl.ipynb
+++ b/_notebooks/2022-08-12-Super-Freaky-Girl.ipynb
@@ -24,7 +24,7 @@
     "\"The song — which, of course, prominently samples Rick James’ well-traveled 1981 funk classic “Super Freak” — debuts at No. 1 this week, as both the most-streamed and highest-selling song in the country this week. Not only does it mark Minaj’s first totally solo No. 1, it’s the first song to debut at No. 1 by any unaccompanied female rapper since Lauryn Hill’s “Doo-Wop (That Thing!)” back in 1998.\" ~ BillBoard\n",
     "\n",
     "\n",
-    "![Super Freaky Girl By Nicki Minaj](images/anti-hero.jpeg)\n",
+    "![Super Freaky Girl By Nicki Minaj](images/superfreakygirl.jpeg)\n",
     "\n"
    ]
   }
