--- a/_notebooks/2022-11-19-We-Dont-Talk-About-Bruno.ipynb
+++ b/_notebooks/2022-11-19-We-Dont-Talk-About-Bruno.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# We Don't Talk About Bruno\n",
-    ">  Top songs of the year\n",
+    ">  A song from Disney's 2021 computer-animated musical feature film Encanto, with music and lyrics written by Lin-Manuel Miranda. It was released by Walt Disney Records as part of the film's soundtrack.\n",
     "- title: We Don't Talk About Bruno\n",
     "- toc: true\n",
     "- badges: false\n",
