--- a/_notebooks/2022-10-23-Anti-hero.ipynb
+++ b/_notebooks/2022-10-23-Anti-hero.ipynb
@@ -34,7 +34,71 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Lyrics\n",
+    "\n",
+    "I have this thing where I get older but just never wiser\n",
+    "Midnights become my afternoons\n",
+    "When my depression works the graveyard shift\n",
+    "All of the people I've ghosted stand there in the room\n",
+    "I should not be left to my own devices\n",
+    "They come with prices and vices\n",
+    "I end up in crises\n",
+    "Tale as old as time\n",
+    "I wake up screaming from dreaming\n",
+    "One day I'll watch as you're leaving\n",
+    "'Cause you got tired of my scheming\n",
+    "For the last time\n",
+    "It's me\n",
+    "Hi!\n",
+    "I'm the problem, it's me\n",
+    "At teatime\n",
+    "Everybody agrees\n",
+    "I'll stare directly at the sun but never in the mirror\n",
+    "It must be exhausting always rooting for the anti-hero\n",
+    "Sometimes I feel like everybody is a sexy baby\n",
+    "And I'm a monster on the hill\n",
+    "Too big to hang out\n",
+    "Slowly lurching toward your favorite city\n",
+    "Pierced through the heart but never killed\n",
+    "Did you hear my covert narcissism\n",
+    "I might disguise as altruism\n",
+    "Like some kind of congressman\n",
+    "Tale as old as time\n",
+    "I wake up screaming from dreaming\n",
+    "One day I'll watch as you're leaving\n",
+    "And life will lose all its meaning\n",
+    "For the last time\n",
+    "It's me\n",
+    "Hi!\n",
+    "I'm the problem, it's me (I'm the problem, it's me)\n",
+    "At teatime\n",
+    "Everybody agrees\n",
+    "I'll stare directly at the sun but never in the mirror\n",
+    "It must be exhausting always rooting for the anti-hero\n",
+    "I have this dream my daughter-in-law kills me for the money\n",
+    "She thinks I left them in the will\n",
+    "The family gathers 'round and reads it\n",
+    "And then someone screams out\n",
+    "\"She's laughing up at us from hell!\"\n",
+    "It's me\n",
+    "Hi!\n",
+    "I'm the problem, it's me\n",
+    "It's me\n",
+    "Hi!\n",
+    "I'm the problem, it's me\n",
+    "It's me\n",
+    "Hi!\n",
+    "Everybody agrees\n",
+    "Everybody agrees\n",
+    "It's me\n",
+    "Hi! (Hi!)\n",
+    "I'm the problem, it's me (I'm the problem, it's me)\n",
+    "At teatime\n",
+    "Everybody agrees (everybody agrees)\n",
+    "I'll stare directly at the sun but never in the mirror\n",
+    "It must be exhausting always rooting for the anti-hero\n"
+   ]
   }
  ],
  "metadata": {
