--- a/_notebooks/2022-08-12-Super-Freaky-Girl.ipynb
+++ b/_notebooks/2022-08-12-Super-Freaky-Girl.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Super Freaky Girl\n",
-    ">  Billboard Top Songs of the Year\n",
+    ">  “Super Freaky Girl” marks the rapper's first solo No. 1 on the Billboard Hot 100 following “Trollz” and “Say So,” her respective collaborations with 6ix9ine and Doja Cat, both reigning atop the chart in 2020.\n",
     "- title: Super Freaky Girl\n",
     "- toc: true\n",
     "- badges: false\n",
