--- a/_notebooks/2022-06-22-Bad-Habit.ipynb
+++ b/_notebooks/2022-06-22-Bad-Habit.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Bad Habits by Steve Lacy\n",
-    ">  Top songs of the year\n",
+    ">  “Bad Habit,” with its mix of R&B and indie pop sensibilities, feels like it could have been released in any era of music, and few songs currently on the charts sound like it. It’s groovy and melancholy, the lyrics are filled with yearning and regret, and Lacy’s guitar strings whirl and wane. It’s a despondent anthem that remarkably manages to fit into everyone’s Instagram story montage. \n",
     "- title: Bad Habits by Steve Lacy\n",
     "- toc: true\n",
     "- badges: false\n",
