--- a/_notebooks/2022-06-22-Bad-Habit.ipynb
+++ b/_notebooks/2022-06-22-Bad-Habit.ipynb
@@ -27,6 +27,107 @@
     "\n",
     "![Jimmy Cooks By Drake (feat. 21 Savage)](images/badhabits.jpeg)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Lyrics\n",
+    "\n",
+    "wanted me\n",
+    "\n",
+    "I wish I knew, I wish I knew you wanted me\n",
+    "\n",
+    "I wish I knew, I wish I knew you wanted me\n",
+    "\n",
+    "What you, ooh, uh, what you do?\n",
+    "\n",
+    "Made a move, coulda made a move\n",
+    "\n",
+    "If I knew I'd be with you\n",
+    "\n",
+    "Is it too late to pursue?\n",
+    "\n",
+    "I bite my tongue, it's a bad habit\n",
+    "\n",
+    "Kinda mad that I didn't take a stab at it\n",
+    "\n",
+    "Thought you were too good for me, my dear\n",
+    "\n",
+    "Never gave me time of day, my dear\n",
+    "\n",
+    "It's okay, things happen for\n",
+    "\n",
+    "Reasons that I think are sure, yeah\n",
+    "\n",
+    "I wish I knew, I wish I knew you wanted me\n",
+    "\n",
+    "I wish I knew (oh), I wish I knew you wanted me\n",
+    "\n",
+    "I wish I knew (yeah), I wish I knew you wanted me (oh)\n",
+    "\n",
+    "I wish I knew, I wish I knew you wanted me\n",
+    "\n",
+    "Say to me (please just say to me)\n",
+    "\n",
+    "If this could wind up\n",
+    "\n",
+    "I wish you wouldn't play with me\n",
+    "\n",
+    "I wanna know (oh no)\n",
+    "\n",
+    "Uh, can I bite your tongue like my bad habit?\n",
+    "\n",
+    "Would you mind if I tried to make a pass at it?\n",
+    "\n",
+    "Were you not too good for me, my dear?\n",
+    "\n",
+    "Funny you come back to me, my dear\n",
+    "\n",
+    "It's okay, things happen for\n",
+    "\n",
+    "Reasons that I can't ignore, yeah\n",
+    "\n",
+    "I wish I knew, I wish I knew you wanted me\n",
+    "\n",
+    "I wish I knew (wish I knew), I wish I knew you wanted me (oh)\n",
+    "\n",
+    "You can't surprise a Gemini\n",
+    "\n",
+    "I'm everywhere, I'm cross-eyed, and\n",
+    "\n",
+    "Now that you're back, I can't decide\n",
+    "\n",
+    "If I decide if you're invited\n",
+    "\n",
+    "You always knew the way to wow me\n",
+    "\n",
+    "*** around, get tongue-tied, and\n",
+    "\n",
+    "I turn it on, I make it rowdy\n",
+    "\n",
+    "Then carry on, but I'm not hidin'\n",
+    "\n",
+    "You grabbin' me hard 'cause you know what you found\n",
+    "\n",
+    "Is biscuits, is gravy, babe, ah-ah\n",
+    "\n",
+    "You can't surprise a Gemini\n",
+    "\n",
+    "But you know it's biscuits, is gravy, babe\n",
+    "\n",
+    "I knew you'd come back around\n",
+    "\n",
+    "'Cause you know it's biscuits, it's gravy, babe\n",
+    "\n",
+    "Let's **** in the back of the mall, lose control\n",
+    "\n",
+    "Go stupid, go crazy, babe\n",
+    "\n",
+    "I know I'll be in your heart 'til the end\n",
+    "\n",
+    "You'll miss me, don't beg me, babe"
+   ]
   }
  ],
  "metadata": {
