--- a/_notebooks/2022-01-20-Light-Switch.ipynb
+++ b/_notebooks/2022-01-20-Light-Switch.ipynb
@@ -9,7 +9,7 @@
     "- title: Light Switch By Charlie Puth\n",
     "- toc: true\n",
     "- badges: false\n",
-    "- image: /images/bad-habits.jpeg\n",
+    "- image: /images/light-swtich.png\n",
     "- type: ap\n",
     "- artist: Charlie Puth\n",
     "- comments: true"
