--- a/_notebooks/2022-10-23-Anti-hero.ipynb
+++ b/_notebooks/2022-10-23-Anti-hero.ipynb
@@ -5,7 +5,8 @@
    "metadata": {},
    "source": [
     "# Anti-Hero\n",
-    ">  As the lead single to Midnights, \"Anti-Hero\" is about Swift's insecurities and anxieties in life both publicly and privately. <a href \"anti-hero lyrics fix\"></a>\n",
+    ">  As the lead single to Midnights, \"Anti-Hero\" is about Swift's insecurities and anxieties in life both publicly and privately. The song itself has been described as a collision of synthpop, neurotic image analysis, and dense lyricism brought together by \"a methodical drum loop\" and \"simmering synths.\" The track is a depressingly relatable one, as Swift deals with the fear of nothing, anxiety from everything, and doubting the ones she trusts the most. <a href \"\"></a>\n",
+    "\n",
     "- title: Anti-Hero\n",
     "- toc: true\n",
     "- badges: false\n",
