--- a/_notebooks/2022-01-22-LightSwitch.ipynb
+++ b/_notebooks/2022-01-22-LightSwitch.ipynb
@@ -20,7 +20,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# As it Was by Harry Styles\n",
+    "# Light Switch\n",
     "\n",
     "Harry Styles‘ “As It Was” logs a 15th week at No. 1 on the Billboard Hot 100 songs chart. \n",
     "\n",
