light sithc lyrics

--- a/_notebooks/2022-01-22-LightSwitch.ipynb
+++ b/_notebooks/2022-01-22-LightSwitch.ipynb
@@ -38,75 +38,123 @@
    "source": [
     "# Lyrics\n",
     "\n",
-    "Holdin' me back\n",
+    "Yeah\n",
     "\n",
-    "Gravity's holdin' me back\n",
+    "Why you callin' at 11:30\n",
     "\n",
-    "I want you to hold out the palm of your hand\n",
+    "When you only wanna do me dirty?\n",
     "\n",
-    "Why don't we leave it at that?\n",
+    "But I hit right back 'cause you got that, that, yeah\n",
     "\n",
-    "Nothin' to say\n",
+    "Why you always wanna act like lovers\n",
     "\n",
-    "When everything gets in the way\n",
+    "But you never wanna be each other's?\n",
     "\n",
-    "Seems you cannot be replaced\n",
+    "I say, \"Don't look back\" but I go right back and\n",
     "\n",
-    "And I'm the one who will stay, oh\n",
+    "All of a sudden, I'm hypnotized\n",
     "\n",
-    "In this world, it's just us\n",
+    "You're the one that I can't deny\n",
     "\n",
-    "You know it's not the same as it was\n",
+    "Every time that I say I'm gonna walk away\n",
     "\n",
-    "In this world, it's just us\n",
+    "You turn me on like a light switch\n",
     "\n",
-    "You know it's not the same as it was\n",
+    "When you're movin' your body around and around\n",
     "\n",
-    "As it was, as it was\n",
+    "Now, I don't wanna fight this (no)\n",
     "\n",
-    "You know it's not the same\n",
+    "You know how to just make me want\n",
     "\n",
-    "Answer the phone\n",
+    "You turn me on like a light switch\n",
     "\n",
-    "\"Harry, you're no good alone\n",
+    "When you're movin' your body around and around\n",
     "\n",
-    "Why are you sittin' at home on the floor?\n",
+    "You got me in a tight grip (yeah)\n",
     "\n",
-    "What kind of pills are you on?\"\n",
+    "You know how to just make me want you, baby\n",
     "\n",
-    "Ringin' the bell\n",
+    "Do you love it when you keep me guessin'? (Me guessin')\n",
     "\n",
-    "And nobody's comin' to help\n",
+    "When you leave, and then you leave me stressin' (me stressin')\n",
     "\n",
-    "Your daddy lives by himself\n",
+    "But I can't stay mad when you walk like that, no (uh)\n",
     "\n",
-    "He just wants to know that you're well, oh\n",
+    "Why you always wanna act like lovers\n",
     "\n",
-    "In this world, it's just us\n",
+    "But you never wanna be each other's?\n",
     "\n",
-    "You know it's not the same as it was\n",
+    "I say don't look back, but I go right back and\n",
     "\n",
-    "In this world, it's just us\n",
+    "All of a sudden, I'm hypnotized (hypnotized)\n",
     "\n",
-    "You know it's not the same as it was\n",
+    "You're the one that I can't deny (can't deny)\n",
     "\n",
-    "As it was, as it was\n",
+    "Every time that I say I'm gonna walk away (yeah)\n",
     "\n",
-    "You know it's not the same\n",
+    "You turn me on like a light switch\n",
     "\n",
-    "Go home, get ahead, light-speed internet\n",
+    "When you're movin' your body around and around\n",
     "\n",
-    "I don't wanna talk about the way that it was\n",
+    "Now, I don't wanna fight this (no)\n",
     "\n",
-    "Leave America, two kids follow her\n",
+    "You know how to just make me want\n",
     "\n",
-    "I don't wanna talk about who's doin' it first\n",
+    "You turn me on like a light switch (switch)\n",
     "\n",
-    "As it was\n",
+    "When you're movin' your body around and around\n",
     "\n",
-    "You know it's not the same as it was\n",
+    "You got me in a tight grip (grip)\n",
     "\n",
-    "As it was, as it was\n"
+    "You know how to just make me want you, baby\n",
+    "\n",
+    "C'mon, c'mon, c'mon, c'mon\n",
+    "\n",
+    "C'mon and show me how you do (do)\n",
+    "\n",
+    "You want, you want, you want, you want\n",
+    "\n",
+    "You wanna keep me wantin' you (me wantin' you, girl)\n",
+    "\n",
+    "C'mon, c'mon, c'mon, c'mon\n",
+    "\n",
+    "C'mon and show me how you do (you do)\n",
+    "\n",
+    "You want, you want, you want, you want\n",
+    "\n",
+    "You wanna keep me wantin' you\n",
+    "\n",
+    "You turn me on like a light switch\n",
+    "\n",
+    "When you're movin' your body around and around\n",
+    "\n",
+    "Now, I don't wanna fight this\n",
+    "\n",
+    "You know how to just make me want you\n",
+    "\n",
+    "You turn me on like a light switch\n",
+    "\n",
+    "When you're movin' your body around and around\n",
+    "\n",
+    "You got me in a tight grip\n",
+    "\n",
+    "You know how to just make me want you, baby\n",
+    "\n",
+    "C'mon, c'mon, c'mon, c'mon\n",
+    "\n",
+    "C'mon and show me how you do (how you do)\n",
+    "\n",
+    "You want, you want, you want, you want\n",
+    "\n",
+    "You wanna keep me wantin' you (baby)\n",
+    "\n",
+    "C'mon, c'mon, c'mon, c'mon\n",
+    "\n",
+    "C'mon and show me how you do (how you do)\n",
+    "\n",
+    "You want, you want, you want, you want\n",
+    "\n",
+    "You wanna keep me wantin' you"
    ]
   }
  ],
