light sithc lyrics

--- a/_notebooks/2022-01-22-LightSwitch.ipynb
+++ b/_notebooks/2022-01-22-LightSwitch.ipynb
@@ -22,7 +22,7 @@
    "source": [
     "# Light Switch\n",
     "\n",
-    "It was released on January 20, 2022, as the lead single from his third studio album, Charlie (2022). \n",
+    "It was released on January 20, 2022, as the lead single from his third studio album, Charlie. \n",
     "\n",
     "Puth solely produced the song and wrote it alongside Jacob Kasher and Jake Torrey. A funky, uptempo track, the song lyrically sees Puth crooning about his attraction to a love interest.\n",
     "\n",
