--- a/_notebooks/2022-06-17-Jimmy-Cooks.ipynb
+++ b/_notebooks/2022-06-17-Jimmy-Cooks.ipynb
@@ -9,7 +9,7 @@
     "- title: Jimmy Cooks\n",
     "- toc: true\n",
     "- badges: false\n",
-    "- image: /images/badhabit.png\n",
+    "- image: /images/jimmycooks.png\n",
     "- type: ap\n",
     "- artist: Drake\n",
     "- comments: true"
@@ -19,7 +19,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Bad Habits by Steve Lacy\n",
+    "# Jimmy Cooks\n",
     "\n",
     "\"Steve Lacy, the breakout solo star who originally gained fame as a member of alt-soul band The Internet, has been a favorite of critics and streaming audiences for some time now. Now, he officially has his first crossover hit.\n",
     "\n",
