--- a/_notebooks/2022-06-17-Jimmy-Cooks.ipynb
+++ b/_notebooks/2022-06-17-Jimmy-Cooks.ipynb
@@ -21,10 +21,7 @@
    "source": [
     "# Jimmy Cooks\n",
     "\n",
-    "\"Steve Lacy, the breakout solo star who originally gained fame as a member of alt-soul band The Internet, has been a favorite of critics and streaming audiences for some time now. Now, he officially has his first crossover hit.\n",
-    "\n",
-    "\n",
-    "“Bad Habit,” lead single from his July-released sophomore solo set Gemini Rights, advances three spots to No. 11 on the Billboard Hot 100 this week, in just its fourth frame on the chart. It’s his first hit of any size on the Hot 100, and already one of the biggest streaming breakout stories of 2022 — a year that hasn’t seen a tremendous number of newer artists scoring major hits.\" ~ BillBoard\n",
+    "\"The Honestly, Nevermind track Jimmy Cooks, seemingly an ode to the character of Jimmy Brooks that Drake portrayed on Degrassi: The Next Generation is the pair’s latest collab, and it debuted at No. 1 on the Billboard Hot 100 over the summer, making it Drake’s 11th Hot 100 No. 1 and 21 Savage’s second.\" ~ BillBoard\n",
     "\n",
     "\n",
     "\n",
