--- a/_notebooks/2022-01-20-LightSwitch.ipynb
+++ b/_notebooks/2022-01-20-LightSwitch.ipynb
@@ -13,7 +13,9 @@
     "- image: /images/light-switch.png\n",
     "- type: ap\n",
     "- artist: Light Switch\n",
-    "- comments: true"
+    "- comments: true\n",
+    "\n",
+    "<!-- Above are the descriptions that take place on the actual posts -->"
    ]
   },
   {
