--- a/_notebooks/2022-04-01-As-It-Was.ipynb
+++ b/_notebooks/2022-04-01-As-It-Was.ipynb
@@ -13,7 +13,9 @@
     "- image: /images/asitwas.png\n",
     "- type: ap\n",
     "- artist: Harry Styles\n",
-    "- comments: true"
+    "- comments: true\n",
+    "\n",
+    "<!-- Above are the descriptions that take place on the actual posts -->"
    ]
   },
   {
