--- a/_notebooks/2022-06-22-Bad-Habit.ipynb
+++ b/_notebooks/2022-06-22-Bad-Habit.ipynb
@@ -12,7 +12,9 @@
     "- image: /images/badhabit.png\n",
     "- type: ap\n",
     "- artist: Steve Lacy\n",
-    "- comments: true"
+    "- comments: true\n",
+    "\n",
+    "<!-- Above are the descriptions that take place on the actual posts -->"
    ]
   },
   {
