--- a/_notebooks/2022-08-12-Super-Freaky-Girl.ipynb
+++ b/_notebooks/2022-08-12-Super-Freaky-Girl.ipynb
@@ -12,7 +12,9 @@
     "- image: /images/superfreakygirl.png\n",
     "- type: ap\n",
     "- artist: Nicki Minaj\n",
-    "- comments: true"
+    "- comments: true\n",
+    "\n",
+    "<!-- Above are the descriptions that take place on the actual posts -->"
    ]
   },
   {
