--- a/_notebooks/2022-10-23-Anti-hero.ipynb
+++ b/_notebooks/2022-10-23-Anti-hero.ipynb
@@ -13,7 +13,9 @@
     "- image: /images/antihero.png\n",
     "- type: ap\n",
     "- artist: Taylor Swift\n",
-    "- comments: true"
+    "- comments: true\n",
+    "\n",
+    "<!-- Above are the descriptions that take place on the actual posts -->"
    ]
   },
   {
