--- a/_notebooks/2022-02-10-Mamiii.ipynb
+++ b/_notebooks/2022-02-10-Mamiii.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# MAMIII\n",
-    ">  As the lead single to Midnights, \"Anti-Hero\" is about Swift's insecurities and anxieties in life both publicly and privately. The song itself has been described as a collision of synthpop, neurotic image analysis, and dense lyricism brought together by \"a methodical drum loop\" and \"simmering synths.\" The track is a depressingly relatable one, as Swift deals with the fear of nothing, anxiety from everything, and doubting the ones she trusts the most. <a href \"https://www.youtube.com/watch?v=b1kbLwvqugk\"></a>\n",
+    ">  The track, which was released Thursday (Feb. 10), starts off slow with melancholic guitar chords that set up what appears to be a spiteful song — but it quickly takes a turn, transitioning into a bouncy, uptempo anthem about the empowerment that comes after letting go of a toxic relationship.\n",
     "\n",
     "- title: MAMIII\n",
     "- toc: true\n",
