--- a/_notebooks/2022-02-10-Mamiii.ipynb
+++ b/_notebooks/2022-02-10-Mamiii.ipynb
@@ -24,11 +24,11 @@
    "source": [
     "# \"MAMIII\"\n",
     "\n",
-    "\"Taylor Swift scores one of the most historic weeks in the 64-year history of the Billboard Hot 100 songs chart, as she becomes the first artist to claim the survey’s entire top 10 in a single frame.\n",
+    "\"Becky G tried for years to collaborate with her fellow G, Karol G. She sent Karol multiple songs and proposals, but the timing was never right. \n",
     "\n",
-    "Swift surpasses Drake, who logged nine of the Hot 100’s top 10 for a week in September 2021.\n",
+    "When the moment for the collab finally came, Becky G wasn’t even looking for it: Instead, Karol G heard MAMIII when her longtime producer and collaborator, Ovy on the Drums — who was also working with Becky G — played her the song. Karol G called Becky G up. She wanted in.\n",
     "\n",
-    "Leading the way for Swift on the Hot 100, “Anti-Hero” launches at No. 1, marking her ninth career leader.\" ~ BillBoard\n",
+    "And while MAMIII may be the most notorious smash to date on Becky G’s new album, Esquemas, it is certainly not the only one. Becky G describes Esquemas as genre-bending, and that it is — traversing rhythmic pop, merengue and R&B, among other genres.\" ~ BillBoard\n",
     "\n",
     "\n",
     "![Anti-Hero By Taylor Swift](images/anti-hero.jpeg)\n",
