--- a/_notebooks/2022-02-10-Mamiii.ipynb
+++ b/_notebooks/2022-02-10-Mamiii.ipynb
@@ -41,127 +41,125 @@
    "source": [
     "# Lyrics\n",
     "\n",
-    "I have this thing where I get older but just never wiser\n",
+    "O-O-Ovy On The Drums\n",
     "\n",
-    "Midnights become my afternoons\n",
+    "Salud, mami\n",
     "\n",
-    "When my depression works the graveyard shift\n",
+    "Ah, ah-ah, ay\n",
     "\n",
-    "All of the people I've ghosted stand there in the room\n",
+    "Lo que no sirve, que no estorbe\n",
     "\n",
-    "I should not be left to my own devices\n",
+    "Te metiste autogol por torpe\n",
     "\n",
-    "They come with prices and vices\n",
+    "Te quedó grande este torque\n",
     "\n",
-    "I end up in crises\n",
+    "Ya no estoy pa que de mí te enamores, baby (sheesh)\n",
     "\n",
-    "Tale as old as time\n",
+    "Sin Visa ni pasaporte (no)\n",
     "\n",
-    "I wake up screaming from dreaming\n",
+    "Mandé tu falso amor de vacaciones (shee, shee, shee, shee)\n",
     "\n",
-    "One day I'll watch as you're leaving\n",
+    "Pa la mierda y nunca vuelvas\n",
     "\n",
-    "'Cause you got tired of my scheming\n",
+    "Que todo se te devuelva, no\n",
     "\n",
-    "For the last time\n",
+    "De lo que me hiciste si no te acuer-\n",
     "\n",
-    "It's me\n",
+    "No me vuelvas a llamar, que hasta boté el celular\n",
     "\n",
-    "Hi!\n",
+    "De lo tóxico que eres, se volvió perjudicial\n",
     "\n",
-    "I'm the problem, it's me\n",
+    "Lo que se va, se va\n",
     "\n",
-    "At teatime\n",
+    "Conmigo no te equivoques\n",
     "\n",
-    "Everybody agrees\n",
+    "De lo tóxico que eres, no te quiero ver más (sheesh)\n",
     "\n",
-    "I'll stare directly at the sun but never in the mirror\n",
+    "Llegué pa'l party, saca la botella\n",
     "\n",
-    "It must be exhausting always rooting for the anti-hero\n",
+    "La que te quería, no sé quién es ella\n",
     "\n",
-    "Sometimes I feel like everybody is a sexy baby\n",
+    "Te dejé el review, no te puse ni una estrella\n",
     "\n",
-    "And I'm a monster on the hill\n",
+    "Y te olvidé porque no dejaste huella\n",
     "\n",
-    "Too big to hang out\n",
+    "Ya no miro pa'trás ni pa parquearme\n",
     "\n",
-    "Slowly lurching toward your favorite city\n",
+    "Tengo uno que está listo pa llevarme\n",
     "\n",
-    "Pierced through the heart but never killed\n",
+    "El segundo está esperando en el hotel\n",
     "\n",
-    "Did you hear my covert narcissism\n",
+    "Y el tercero lo conozco esta noche\n",
     "\n",
-    "I might disguise as altruism\n",
+    "No me llames, que mi número cambié (cambié)\n",
     "\n",
-    "Like some kind of congressman\n",
+    "Si quieres que te lo dé (dé)\n",
     "\n",
-    "Tale as old as time\n",
+    "Llama, 1-800-jódete\n",
     "\n",
-    "I wake up screaming from dreaming\n",
+    "No sé si me escuchaste\n",
     "\n",
-    "One day I'll watch as you're leaving\n",
+    "No me llames, que mi número cambié (cambié)\n",
     "\n",
-    "And life will lose all its meaning\n",
+    "Si quieres que te lo dé (dé)\n",
     "\n",
-    "For the last time\n",
+    "Llama, 1-800-jódete (jódete)\n",
     "\n",
-    "It's me\n",
+    "No me vuelvas a llamar, hasta boté el celular\n",
     "\n",
-    "Hi!\n",
+    "De lo tóxico que eres, se volvió perjudicial\n",
     "\n",
-    "I'm the problem, it's me (I'm the problem, it's me)\n",
+    "Lo que se va, se va, ah\n",
     "\n",
-    "At teatime\n",
+    "Conmigo no te equivoques\n",
     "\n",
-    "Everybody agrees\n",
+    "De lo tóxico que eres, no te quiero ver más (ey)\n",
     "\n",
-    "I'll stare directly at the sun but never in the mirror\n",
+    "Ay, yo lo lamento\n",
     "\n",
-    "It must be exhausting always rooting for the anti-hero\n",
+    "Tu' gana' de volver murieron en el intento (ah)\n",
     "\n",
-    "I have this dream my daughter-in-law kills me for the money\n",
+    "Lo hiciste ver como que perdiste el tiempo\n",
     "\n",
-    "She thinks I left them in the will\n",
+    "Quedaste bien porque lo mío ni lo cuento (papi)\n",
     "\n",
-    "The family gathers 'round and reads it\n",
+    "Te veo en la' rede', no puedo creerlo, qué pena de ti (pena de ti)\n",
     "\n",
-    "And then someone screams out\n",
+    "Yo que fui buena y tú, qué gonorrea, pagándome así (eah, qué gonorrea)\n",
     "\n",
-    "\"She's laughing up at us from hell!\"\n",
+    "Rata de dos patas, lo dijo Paquita, un animal rastrero (ja, ja, ja)\n",
     "\n",
-    "It's me\n",
+    "Que se come todo que se atraviesa, Diablo, tú ere' un cuero (cuero)\n",
     "\n",
-    "Hi!\n",
+    "No digas: \"Te quiero\", mejor sé sincero\n",
     "\n",
-    "I'm the problem, it's me\n",
+    "No digas: \"Te amo\" porque eso fue en vano (ah)\n",
     "\n",
-    "It's me\n",
+    "Llorando estabas tú y como no te salí\n",
     "\n",
-    "Hi!\n",
+    "Andas comiéndote a otra, pero estás pensando en mí (sheesh)\n",
     "\n",
-    "I'm the problem, it's me\n",
+    "No me vuelvas a llamar, que hasta boté el celular\n",
     "\n",
-    "It's me\n",
+    "De lo tóxico que eres, se volvió perjudicial\n",
     "\n",
-    "Hi!\n",
+    "Lo que se va, se va, ah\n",
     "\n",
-    "Everybody agrees\n",
+    "Conmigo no te equivoques\n",
     "\n",
-    "Everybody agrees\n",
+    "De lo tóxico que eres, no te quiero ver más\n",
     "\n",
-    "It's me\n",
+    "Ow, repítelo, mami\n",
     "\n",
-    "Hi! (Hi!)\n",
+    "(Que a veces no te cambian por algo mejor\n",
     "\n",
-    "I'm the problem, it's me (I'm the problem, it's me)\n",
+    "Y ni siquiera por algo más rico)\n",
     "\n",
-    "At teatime\n",
+    "KAROL G y Becky G\n",
     "\n",
-    "Everybody agrees (everybody agrees)\n",
+    "It's the real G's, baby (ah, ja, ja)\n",
     "\n",
-    "I'll stare directly at the sun but never in the mirror\n",
-    "\n",
-    "It must be exhausting always rooting for the anti-hero\n"
+    "Ovy On The Drums\n"
    ]
   }
  ],
