--- a/_notebooks/2022-02-10-Mamiii.ipynb
+++ b/_notebooks/2022-02-10-Mamiii.ipynb
@@ -31,7 +31,7 @@
     "And while MAMIII may be the most notorious smash to date on Becky G’s new album, Esquemas, it is certainly not the only one. Becky G describes Esquemas as genre-bending, and that it is — traversing rhythmic pop, merengue and R&B, among other genres.\" ~ BillBoard\n",
     "\n",
     "\n",
-    "![Anti-Hero By Taylor Swift](images/anti-hero.jpeg)\n",
+    "![MAMIII by Becky G and Karol G](images/MAMIII.jpg)\n",
     "\n"
    ]
   },
