--- a/_notebooks/2022-02-10-Mamiii.ipynb
+++ b/_notebooks/2022-02-10-Mamiii.ipynb
@@ -10,7 +10,7 @@
     "- title: MAMIII\n",
     "- toc: true\n",
     "- badges: false\n",
-    "- image: /images/antihero.png\n",
+    "- image: /images/MAMIII.png\n",
     "- type: ap\n",
     "- artist: Karol G and Becky G\n",
     "- comments: true\n",
