--- a/_notebooks/2022-01-20-LightSwitch.ipynb
+++ b/_notebooks/2022-01-20-LightSwitch.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Light Switch\n",
     "\n",
-    ">As It Was is a wistful synth-pop track rooted in personal transitions. It's about metamorphosis and embracing change, Harry Styles explained to Audacy's Bru, and former self and perspective shift, and all of that kind of stuff.\n",
+    "> Light Switch possesses a dreamy 80s sheen and a ton of Puth's personal touches, from lip-smacking ad-libs to hooks nestled into bigger hooks, making for both a breathtaking pop fantasia and welcome return.\n",
     "- title: Light Switch\n",
     "- toc: true\n",
     "- badges: false\n",
